{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 87,
  "lineage": "a1c167f7-19a9-b466-2632-153fac77c3d0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-054b9655d36010f3b",
            "domain": "vpc",
            "id": "eipalloc-02eb43bcadb486651",
            "instance": "i-08ddeb04485522d7d",
            "network_interface": "eni-02a9fb5a995aaaab4",
            "private_dns": "ip-10-0-0-242.eu-west-1.compute.internal",
            "private_ip": "10.0.0.242",
            "public_dns": "ec2-54-195-92-75.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.92.75",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_instance.smartpension_test_bastion",
            "module.vpc.aws_security_group.smartpension_test_bastion_security_group",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_1",
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-059be4fd709e548ba",
            "domain": "vpc",
            "id": "eipalloc-0e7a4ddea0784630e",
            "instance": "i-013c9cef0b56525ff",
            "network_interface": "eni-0b7db9fe47489ff67",
            "private_dns": "ip-10-0-0-31.eu-west-1.compute.internal",
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-54-78-34-238.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.34.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_instance.nat_1",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f32a21f3a0ecbde8",
            "domain": "vpc",
            "id": "eipalloc-0b40a394852ecc87d",
            "instance": "i-0c877baa92a8ce152",
            "network_interface": "eni-05ecdf2af61e34cfc",
            "private_dns": "ip-10-0-1-31.eu-west-1.compute.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-54-228-61-248.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.61.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_instance.nat_2",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "smartpension_test_private_region_1_az_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01812f9035674fe3c",
            "public_dns": "ec2-63-32-18-192.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.32.18.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "smartpension_test_private_region_1_az_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c55b15d3ad2d406e",
            "public_dns": "ec2-52-212-184-189.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.184.189",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-30913f47",
            "arn": "arn:aws:ec2:eu-west-1:291213119936:instance/i-013c9cef0b56525ff",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013c9cef0b56525ff",
            "instance_state": "running",
            "instance_type": "m1.small",
            "ipv6_address_count": 0,
            "key_name": "arulkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7db9fe47489ff67",
            "private_dns": "ip-10-0-0-31.eu-west-1.compute.internal",
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-54-78-34-238.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.34.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0aecb896659ee4c95",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0efd4ba846d23ed2f",
            "tags": {
              "Name": "VPC NAT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d6f065debd4effe"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-30913f47",
            "arn": "arn:aws:ec2:eu-west-1:291213119936:instance/i-0c877baa92a8ce152",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c877baa92a8ce152",
            "instance_state": "running",
            "instance_type": "m1.small",
            "ipv6_address_count": 0,
            "key_name": "arulkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ecdf2af61e34cfc",
            "private_dns": "ip-10-0-1-31.eu-west-1.compute.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-54-228-61-248.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.61.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0ec0488d7453f9b3c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0eca559036fe2d6a4",
            "tags": {
              "Name": "VPC NAT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d6f065debd4effe"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "smartpension_test_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d658f84a6d84a80",
            "arn": "arn:aws:ec2:eu-west-1:291213119936:instance/i-08ddeb04485522d7d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ddeb04485522d7d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arulkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a9fb5a995aaaab4",
            "private_dns": "ip-10-0-0-242.eu-west-1.compute.internal",
            "private_ip": "10.0.0.242",
            "public_dns": "ec2-54-195-92-75.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.92.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09554b4cac88021cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efd4ba846d23ed2f",
            "tags": {
              "Bastion": "true",
              "Name": "smartpension_test bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc96846f2aa06b54"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.smartpension_test_bastion_security_group",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_1",
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "smartpension_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:internet-gateway/igw-00c07dd54c0109817",
            "id": "igw-00c07dd54c0109817",
            "owner_id": "291213119936",
            "tags": {
              "ENV": "prod",
              "Name": "smartpension-test internet-gateway",
              "Project": "smartpension-test"
            },
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_region_1_az_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c0149993e5542ee7",
            "owner_id": "291213119936",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ENV": "prod",
              "Name": "smartpension-test private eu-west-1a subnet route table",
              "Project": "smartpension-test"
            },
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_region_1_az_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bf2a99a825920917",
            "owner_id": "291213119936",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ENV": "prod",
              "Name": "smartpension-test private eu-west-1b subnet route table",
              "Project": "smartpension-test"
            },
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "smartpension_test_private_subnet_region_1_az_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d661c7236929bcf7",
            "route_table_id": "rtb-0bf2a99a825920917",
            "subnet_id": "subnet-0eca559036fe2d6a4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_region_1_az_2",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_2",
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "smartpension_test_public_subnet_region_1_az_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ce577b5c4cb14b2",
            "route_table_id": "rtb-0c0149993e5542ee7",
            "subnet_id": "subnet-0efd4ba846d23ed2f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_region_1_az_1",
            "module.vpc.aws_subnet.smartpension_test_public_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:security-group/sg-09d6f065debd4effe",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-09d6f065debd4effe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": "",
            "owner_id": "291213119936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NATSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smartpension_test_bastion_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:security-group/sg-0bc96846f2aa06b54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc96846f2aa06b54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "smartpension-test-bastion-security-group",
            "name_prefix": "",
            "owner_id": "291213119936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "demo",
              "Name": "smartpension_test_bastion_security_group",
              "Project": "smartpension-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smartpension_test_lambda_vpc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:security-group/sg-093dc59897bc70310",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093dc59897bc70310",
            "ingress": [],
            "name": "smartpension-test-lambda-vpc-security-group",
            "name_prefix": "",
            "owner_id": "291213119936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "smartpension-test-lambda-vpc-security-group",
              "Project": "smartpension-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smartpension_test_vpc_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:security-group/sg-067ac112848cafd85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067ac112848cafd85",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093dc59897bc70310",
                  "sg-0bc96846f2aa06b54"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vpc_inbound",
            "name_prefix": "",
            "owner_id": "291213119936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "demo",
              "Name": "smartpension_test_vpc_inbound",
              "Project": "smartpension-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_security_group.smartpension_test_bastion_security_group",
            "module.vpc.aws_security_group.smartpension_test_lambda_vpc_security_group",
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "smartpension_test_private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:subnet/subnet-0aea0431b58022fa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0aea0431b58022fa6",
            "map_public_ip_on_launch": false,
            "owner_id": "291213119936",
            "tags": {
              "Name": "private eu-west-1a subnet",
              "Project": "smartpension-test"
            },
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "smartpension_test_private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:subnet/subnet-0d0151fe202c8caf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d0151fe202c8caf6",
            "map_public_ip_on_launch": false,
            "owner_id": "291213119936",
            "tags": {
              "Name": "private eu-west-1b subnet",
              "Project": "smartpension-test"
            },
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "smartpension_test_public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:subnet/subnet-0efd4ba846d23ed2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0efd4ba846d23ed2f",
            "map_public_ip_on_launch": false,
            "owner_id": "291213119936",
            "tags": {
              "Name": "public eu-west-1a subnet",
              "Project": "smartpension-test"
            },
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "smartpension_test_public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:subnet/subnet-0eca559036fe2d6a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0eca559036fe2d6a4",
            "map_public_ip_on_launch": false,
            "owner_id": "291213119936",
            "tags": {
              "Name": "public eu-west-1b subnet",
              "Project": "smartpension-test"
            },
            "vpc_id": "vpc-0147d99c046cf1f88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.smartpension_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "smartpension_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:291213119936:vpc/vpc-0147d99c046cf1f88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f924be900ec6079",
            "default_route_table_id": "rtb-0314fcd7c5a23f3f7",
            "default_security_group_id": "sg-00b9d41353d1060c9",
            "dhcp_options_id": "dopt-fa503b9c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0147d99c046cf1f88",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0314fcd7c5a23f3f7",
            "owner_id": "291213119936",
            "tags": {
              "Name": "arul-demo VPC",
              "Project": "arul-demo"
            }
          }
        }
      ]
    }
  ]
}